--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ extend-ignore = [
   "E501",
 ]
 extend-select = ["B", "C90", "D", "I", "N", "RUF", "UP", "T"]
-isort = {known-first-party = ["auth", "classification", "common", "leaderboard", "mcu", "telecom"]}
+isort = {known-first-party = ["auth", "classification", "common", "leaderboard", "contrib", "telecom"]}
 line-length = 88
 
 [tool.rye]
@@ -44,7 +44,7 @@ managed = true
 virtual = true
 
 [tool.rye.workspace]
-members = ["auth", "classification", "common", "leaderboard", "mcu", "telecom"]
+members = ["auth", "classification", "common", "leaderboard", "contrib", "telecom"]
 
 [tool.uv]
 dev-dependencies = [
@@ -53,7 +53,7 @@ dev-dependencies = [
   "classification",
   "common",
   "leaderboard",
-  "mcu",
+  "contrib",
   "telecom",
   # Dev dependencies
   "pre-commit>=3.5.0",
@@ -67,8 +67,8 @@ auth = {workspace = true}
 classification = {workspace = true}
 common = {workspace = true}
 leaderboard = {workspace = true}
-mcu = {workspace = true}
+contrib = {workspace = true}
 telecom = {workspace = true}
 
 [tool.uv.workspace]
-members = ["auth", "classification", "common", "leaderboard", "mcu", "telecom"]
+members = ["auth", "classification", "common", "leaderboard", "contrib", "telecom"]
