--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ dev-dependencies = [
   "classification",
   "common",
   "leaderboard",
-  "contrib",
+  "contrib[all]",
   "telecom",
   # Dev dependencies
   "pre-commit>=3.5.0",
