--- a/classification/pyproject.toml
+++ b/classification/pyproject.toml
@@ -4,14 +4,15 @@ requires = ["hatchling"]
 
 [project]
 dependencies = [
-  "click>=8.1.7",
-  "librosa>=0.10.2.post1",
-  "notebook>=7.2.1",
-  "scipy>=1.13.1",
-  "seaborn>=0.13.2",
-  "sounddevice>=0.5.0",
-  "soundfile>=0.12.1",
-  "tqdm>=4.66.5",
+    "click>=8.1.7",
+    "librosa>=0.10.2.post1",
+    "notebook>=7.2.1",
+    "scipy>=1.13.1",
+    "seaborn>=0.13.2",
+    "sounddevice>=0.5.0",
+    "soundfile>=0.12.1",
+    "tqdm>=4.66.5",
+    "tensorflow>=2.18.0",
 ]
 name = "classification"
 requires-python = ">= 3.9"
