--- a/telecom/gnuradio/gr-fsk/grc/fsk_onQuery_noise_estimation.block.yml
+++ b/telecom/gnuradio/gr-fsk/grc/fsk_onQuery_noise_estimation.block.yml
@@ -36,7 +36,7 @@ inputs:
 
 outputs:
   - domain: message
-    label: NoisePow
+    label: noisePow
     id: noisePow
 
 #  'file_format' specifies the version of the GRC yml format used in the file
