--- a/telecom/gnuradio/gr-fsk/grc/fsk_packet_parser.block.yml
+++ b/telecom/gnuradio/gr-fsk/grc/fsk_packet_parser.block.yml
@@ -40,13 +40,19 @@ inputs:
     dtype: byte
 
 outputs:
-  - label: Output
+  - label: correct payload
     dtype: byte
     vlen: ${payload_len}
   
-  - label: payloadMetaData
+  - label: payload
+    optional: 1
+    dtype: byte
+    vlen: ${payload_len}
+  
+  - domain: message
+    optional: 1
+    label: payloadMetaData
     id: payloadMetaData
-    domain: message
 
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
