Link noise estimation query to logger block

--- a/telecom/gnuradio/gr-fsk/grc/fsk_logger.block.yml
+++ b/telecom/gnuradio/gr-fsk/grc/fsk_logger.block.yml
@@ -47,6 +47,11 @@ parameters:
 inputs:
   - domain: message
     optional: 1
+    id: noiseMetrics
+    label: noiseMetrics
+
+  - domain: message
+    optional: 1
     id: syncMetrics
     label: syncMetrics
   
