--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pyqt5>=5.15.11",
     "xgboost>=2.1.3",
     "pycryptodome>=3.21.0",
+    "pyqtgraph>=0.13.7",
 ]
 
 [tool.ruff]
