--- a/auth/pyproject.toml
+++ b/auth/pyproject.toml
@@ -4,10 +4,11 @@ requires = ["hatchling"]
 
 [project]
 dependencies = [
-  "click>=8.1.7",
-  "cryptography>=43.0.0",
-  "pyserial>=3.5",
-  "pyzmq>=26.2.0",
+    "click>=8.1.7",
+    "cryptography>=43.0.0",
+    "pyserial>=3.5",
+    "pyzmq>=26.2.0",
+    "pyqt6-webengine>=6.8.0",
 ]
 name = "auth"
 requires-python = ">= 3.9"
