Managed to go to 0.4mW of consumption

--- a/mcu/reoptimization_main_app/Release/makefile
+++ b/mcu/reoptimization_main_app/Release/makefile
@@ -34,23 +34,23 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := optimization_main_app
+BUILD_ARTIFACT_NAME := reoptimization_main_app
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-optimization_main_app.elf \
+reoptimization_main_app.elf \
 
 MAP_FILES += \
-optimization_main_app.map \
+reoptimization_main_app.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-optimization_main_app.list \
+reoptimization_main_app.list \
 
 
 # All Target
@@ -58,11 +58,11 @@ all:
 	+@$(MAKE) --no-print-directory pre-build && $(MAKE) --no-print-directory main-build
 
 # Main-build Target
-main-build: optimization_main_app.elf secondary-outputs
+main-build: reoptimization_main_app.elf secondary-outputs
 
 # Tool invocations
-optimization_main_app.elf optimization_main_app.map: $(OBJS) $(USER_OBJS) C:\Dev\GIT\LELEC210X_GROUP_E\mcu\optimization_main_app\STM32L4A6ZGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "optimization_main_app.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Dev\GIT\LELEC210X_GROUP_E\mcu\optimization_main_app\STM32L4A6ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="optimization_main_app.map" -Wl,--gc-sections -static -L"C:\Dev\GIT\LELEC210X_GROUP_E\mcu\optimization_main_app\ARM_CMSIS\CMSIS\DSP\Lib\GCC" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+reoptimization_main_app.elf reoptimization_main_app.map: $(OBJS) $(USER_OBJS) C:\Dev\GIT\LELEC210X_GROUP_E\mcu\reoptimization_main_app\STM32L4A6ZGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "reoptimization_main_app.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Dev\GIT\LELEC210X_GROUP_E\mcu\reoptimization_main_app\STM32L4A6ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="reoptimization_main_app.map" -Wl,--gc-sections -static -L"C:\Dev\GIT\LELEC210X_GROUP_E\mcu\reoptimization_main_app\ARM_CMSIS\CMSIS\DSP\Lib\GCC" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -71,14 +71,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-optimization_main_app.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "optimization_main_app.list"
+reoptimization_main_app.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "reoptimization_main_app.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) default.size.stdout optimization_main_app.elf optimization_main_app.list optimization_main_app.map
+	-$(RM) default.size.stdout reoptimization_main_app.elf reoptimization_main_app.list reoptimization_main_app.map
 	-@echo ' '
 
 pre-build:
